--- a/my-app/package.json
+++ b/my-app/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "postinstall": "ngcc"
   },
   "private": true,
   "dependencies": {
@@ -20,7 +21,6 @@
     "@angular/router": "^16.0.0",
     "ngx-useful-swiper": "^10.0.1",
     "rxjs": "~7.8.0",
-    "swiper": "^6.8.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -29,7 +29,6 @@
     "@angular/cli": "~16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
-    "@types/swiper": "^6.0.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
