--- a/my-app/package.json
+++ b/my-app/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "ng-image-slider": "^7.0.0",
     "ngx-useful-swiper": "^10.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
