--- a/my-app/package.json
+++ b/my-app/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
-    "ng-image-slider": "^7.0.0",
+    "bootstrap": "^5.2.3",
+    "ngx-slick-carousel": "^15.0.0",
     "ngx-useful-swiper": "^10.0.1",
     "rxjs": "~7.8.0",
+    "slick-carousel": "^1.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
