--- a/my-app/package.json
+++ b/my-app/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "aos": "^2.3.4",
     "bootstrap": "^5.2.3",
     "ng-image-slider": "^7.0.0",
     "ngx-slick-carousel": "^15.0.0",
@@ -33,6 +34,7 @@
     "@angular-devkit/build-angular": "^16.0.0",
     "@angular/cli": "~16.0.0",
     "@angular/compiler-cli": "^16.0.0",
+    "@types/aos": "^3.0.4",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
