--- a/my-app/package.json
+++ b/my-app/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^16.0.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.2.3",
+    "ng-angular-popup": "^0.3.1",
     "ng-image-slider": "^7.0.0",
     "ngx-slick-carousel": "^15.0.0",
     "ngx-useful-swiper": "^10.0.1",
