--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,9 +16,13 @@
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
     "@angular/forms": "^16.0.0",
+    "@angular/material": "^16.0.1",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@material/card": "^15.0.0-canary.3b5b55e31.0",
+    "@material/radio": "^15.0.0-canary.3b5b55e31.0",
+    "@material/slider": "^15.0.0-canary.3b5b55e31.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.2.3",
     "ng-angular-popup": "^0.3.1",
