--- a/my-app/package.json
+++ b/my-app/package.json
@@ -23,6 +23,7 @@
     "@material/card": "^15.0.0-canary.3b5b55e31.0",
     "@material/radio": "^15.0.0-canary.3b5b55e31.0",
     "@material/slider": "^15.0.0-canary.3b5b55e31.0",
+    "angular-progress-bar": "^1.0.11",
     "aos": "^2.3.4",
     "bootstrap": "^5.2.3",
     "ng-angular-popup": "^0.3.1",
@@ -41,6 +42,7 @@
     "@angular/compiler-cli": "^16.0.0",
     "@types/aos": "^3.0.4",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^20.2.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
