--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,9 +13,10 @@
   "dependencies": {
     "@angular/animations": "^16.0.0",
     "@angular/common": "^16.0.0",
-    "@angular/compiler": "^16.0.0",
+    "@angular/compiler": "^16.0.2",
     "@angular/core": "^16.0.0",
     "@angular/forms": "^16.0.0",
+    "@angular/http": "^7.2.16",
     "@angular/material": "^16.0.1",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
@@ -23,6 +24,9 @@
     "@material/card": "^15.0.0-canary.3b5b55e31.0",
     "@material/radio": "^15.0.0-canary.3b5b55e31.0",
     "@material/slider": "^15.0.0-canary.3b5b55e31.0",
+    "@ngx-loading-bar/core": "^6.0.2",
+    "@ngx-loading-bar/http-client": "^6.0.2",
+    "@ngx-loading-bar/router": "^6.0.2",
     "angular-progress-bar": "^1.0.11",
     "aos": "^2.3.4",
     "bootstrap": "^5.2.3",
